# plotmap

./: .gitignore  README.md  config.toml  config_1000x650.toml  convert_pbf.sh  cpp_svgtogcode.py  extract.py  gcode_analyzer.py  generate_map.py  map_germany.py  maptools.py  new_map_world.py  projection.py  pyproject.toml  svgtogcode.py  svgwriter.py
configs/: config.toml  config_1000x650.toml  config_2000x1200.toml  config_2500x1500.toml  config_3000x2000.toml  config_750x500.toml
database/: install_imposm3.txt  set_up_postgres.txt
dtm/: rtest.py
experiments/: .gitignore  experiment_conductor.py  hatching_test.py  projection_test.py
experiments/hatching/: convert_DEM_to_STL.py  convert_STL_to_DEM.py  crop_geotiff.py  edge_detection.py  flowlines.py  flowlines_stoplines.py  gebco_to_blender.py  hatching_test_2.py  imgprocessing.py  run.py  scale.py  scales.py  slope.py  smoothing.py  temp_experiment_flowlines_two_stage.py
experiments/labelplacement/: parser.py  run.py
hardware/: config.yaml
lineworld/: __init__.py  main.py  parameter_visual_comparison.py  projection_test.py  run.py
lineworld/core/: flowlines.py  hatching.py  layerstack.py  map.py  maptools.py  svgwriter.py
lineworld/layers/: bathymetry.py  bflowlines.py  cities.py  coastlines.py  contour.py  contour2.py  elevation.py  grid.py  labels.py  layer.py  meta.py  oceancurrents.py
lineworld/util/: colormaps.py  downloader.py  (+8 more)
tests/: conftest.py  test_flowlines.py  test_gebco_grid_to_polygon.py  test_hatching.py  test_hersheyfont.py  test_lineworld.py
world_data/: gebco_grid_to_polygons.py
