[project]
name = "lineworld"
version = "0.1.0"
description = "vector world map generator for pen plotters from OSM/shapefile/geotiff data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.1.0",
    "distributed>=2025.1.0",
    "fiona>=1.10.1",
    "fire>=0.7.0",
    "geoalchemy2>=0.16.0",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "psycopg>=3.2.3",
    "pyproj>=3.7.0",
    "pytest>=8.3.4",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
    "ruff>=0.6.9",
    "shapely>=2.0.6",
    "shapelysmooth>=0.2.1",
    "svgpathtools>=1.6.1",
    "tifffile>=2024.12.12",
    "toml>=0.10.2",
]

[tool.ruff]
line-length = 120
